--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 <body>
-	<div>
+	<div id="inputEl">
 		<input type="text" name="text">
 	</div>
 	<div id="container">
