--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
 <head>
 	<title>WYSIWYG</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
+<header>WYSIWYG Exercise</header>
 <body>
-	<div id="inputEl">
+	<div id="inputEl" >
+		Text Input Field:
 		<input type="text" name="text">
 	</div>
 	<div id="container">
