working on mirror text

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <header>WYSIWYG Exercise</header>
 <body>
-	<div id="inputEl" >
+	<div>
 		Text Input Field:
-		<input type="text" name="text">
+		<input type="text" name="text" id="inputEl">
 	</div>
 	<div id="container">
 	</div>
